# hpc-app-bundler

./: .gitignore  Dockerfile  README.md  launch-sandbox.sh  managed-settings.json  project_instructions.md  pyproject.toml
.claude/: settings.json.example
.claude/commands/: hpc-bundle.md
.claude/workflows/: hpc-bundler-local.js  hpc-bundler.js
hpc_bundler/: bundle.py  docker_manager.py  env_probe.py  render.py
hpc_bundler/cli/: assemble.py  build_exec.py  download.py  probe.py  validate.py
hpc_bundler/templates/: install.sh.j2  modulefile.lua.j2
