[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-bundler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "docker>=7.0",
    "requests>=2.31",
    "jinja2>=3.1",
    "networkx>=3.0",
    "rich>=13.0",
    "PyYAML>=6.0",
]

[project.scripts]
hpc-bundler = "hpc_bundler.cli.probe:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hpc_bundler*"]
